Show how to include Twitter search query in sample

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -23,6 +23,8 @@ twitter:
   consumer_secret: asldkjaskldj
   access_token: asdkjaksldj
   access_token_secret: aslkjdlaskjd
+  searches:
+  - query: diybio
   lists:
   - owner: diybio
     slug: garagistas
